--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Firma Station" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lato-font/3.0.0/css/lato-font.min.css" integrity="sha512-rSWTr6dChYCbhpHaT1hg2tf4re2jUxBWTuZbujxKg96+T87KQJriMzBzW5aqcb8jmzBhhNSx4XYGA6/Y+ok1vQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <title>Firma Station</title>
 </head>
 
