misc: update dependencies

--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -24,7 +24,7 @@
     .container {
       max-width: 800px;
       width: 800px;
-      margin:30px 0 50px 0 ;
+      margin: 30px 0 50px 0;
     }
 
     .title {
@@ -46,7 +46,7 @@
     }
 
     .contents li {
-      margin-bottom:10px;
+      margin-bottom: 10px;
     }
 
     .contents div {
@@ -65,7 +65,7 @@
       .container {
         max-width: 100%;
         width: 100%;
-        margin:30px 20px 50px 20px;
+        margin: 30px 20px 50px 20px;
       }
     }
   </style>
@@ -139,7 +139,7 @@
         Contact Us
         <div>
           Should you have any inquiries, complaints, or suggestions regarding this
-          Policy, you may contact us at <a href="mailto:contact@firmachain.org">contact@firmachain.org</a>.
+          Policy, you may contact us at <a href="mailto:info@firmachain.org">info@firmachain.org</a>.
         </div>
       </li>
     </ol>
